--- a/dhis-2/dhis-web/dhis-web-dataentry/src/main/webapp/dhis-web-dataentry/select.vm
+++ b/dhis-2/dhis-web/dhis-web-dataentry/src/main/webapp/dhis-web-dataentry/select.vm
@@ -58,6 +58,8 @@ var i18n_confirm_deletion = '$encoder.jsEscape( $i18n.getString( "confirm_deleti
 var i18n_file_upload_failed = '$encoder.jsEscape( $i18n.getString( "file_upload_failed" ), "'" )';
 var i18n_loading_file_info_failed = '$encoder.jsEscape( $i18n.getString( "loading_file_info_failed" ), "'" )';
 var i18n_orgunit_is_closed = '$encoder.jsEscape( $i18n.getString( "orgunit_is_closed" ) , "'")';
+var i18n_complete_compulsory_notification = '$encoder.jsEscape( $i18n.getString( "complete_compulsory_notification" ) , "'")';
+var i18n_uncomplete_notification = '$encoder.jsEscape( $i18n.getString( "uncomplete_notification" ) , "'")';
 </script>
 
 <style type="text/css" media="print">
