--- a/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/macros.vm
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/macros.vm
@@ -353,12 +353,12 @@ jQuery.each(attributes, function(i, item) {
 <table>
 	#foreach( $attribute in $args.attributes )
 		#set( $text = $attribute.displayName )
-		#set( $id = $attribute.id )
+		#set( $id = $attribute.uid )
 		#set( $mandatory = $attribute.mandatory )
     #set( $valueType = $attribute.valueType )
 
-		#if( $!args.attributeValues.get( $attribute.id ) )
-			#set( $value = $!args.attributeValues.get( $attribute.id ) )
+		#if( $!args.attributeValues.get( $id ) )
+			#set( $value = $!args.attributeValues.get( $id ) )
 		#else
 			#set( $value = "" )
 		#end
