--- a/dhis-2/dhis-web/dhis-web-dataentry/src/main/webapp/dhis-web-dataentry/responseMetaData.vm
+++ b/dhis-2/dhis-web/dhis-web-dataentry/src/main/webapp/dhis-web-dataentry/responseMetaData.vm
@@ -73,7 +73,7 @@
 #set( $categoryOptions = $categoryOptionMap.get( $category.uid ) )
 #set( $size2 = $categoryOptions.size() )
 #foreach( $option in $categoryOptions )
-{"id":"${option.uid}","name":"$encoder.jsonEncode( ${option.displayName} )"#if( ${option.startDate} ),"start":"${option.startDate}"#end
+{"id":"${option.uid}","name":"$encoder.jsonEncode( ${option.displayFormName} )"#if( ${option.startDate} ),"start":"${option.startDate}"#end
 #if( ${option.endDate} ),"end":"${option.endDate}"#end
 #if( ${option.organisationUnits.size()} > 0 ),"ous":[
 #set( $size3 = $option.organisationUnits.size() )
