--- a/dhis-2/dhis-web/dhis-web-dataentry/src/main/webapp/dhis-web-dataentry/sectionForm.vm
+++ b/dhis-2/dhis-web/dhis-web-dataentry/src/main/webapp/dhis-web-dataentry/sectionForm.vm
@@ -69,7 +69,7 @@
                                             #if( $categoryOption.isDefault() )
                                                 ${i18n.getString( "value" )}
                                             #else
-                                                ${encoder.htmlEncode( $categoryOption.displayName )}
+                                                ${encoder.htmlEncode( $categoryOption.displayFormName )}
                                             #end
                                         </span>
                                     </th>
