Convert metadata attributeValues to jsonb (#3135) [#6369]
* Convert dynamic attributes to jsonb

* Convert AttributeValue object to support json format.

* Update hbm files for jsonb attributevalues

* Update HibernateGenericStore to support JsonB AttributeValues.

* Fix unit test

* Fix unit tests

* Fix unit tests

* Fixing Preheat service for jsonb attributeValue

* Fix unit test errors

* Add function to take Attribute from cache in AbstractCrudController

* Fix jsonb query error in method HibernateGenericStore.getAllByAttributes()

* Remove attributeUid field from attributeValues jsonb

* Add sql script to migrate data to jsonb attributevalues columns

* Fix unit tests for jsonb attributevalues

* Fix unit tests

* Fix unit test error for jsonb attribute

* Fix Transactional issue for IntegrationTestBase

* Fix unit test errors in AttributeValueServiceTest

* Fix bug for method HibernateGenericStore.getAllByAttributes

* Fix error empty database after running integration tests

* Fix bug import mandatory attribute values

* Fix unit test error for ObjectBundleServiceAttributesTest

* clean up code

* Fix bug attribute properties are not loaded in metadata export service

* Clean up code

* Fix flyway version for migration script

* Fix bug not display attribute in addDocument.vm

* Clean up code and add unit test for manager.getAllValuesByAttributes

* Remove created and lastUpdated from jsonb AttributeValues

* Clean up code and fix bug cant save attributeValues for Document.

* Add method getAllValuesByAttributes in HibernateGenericStore

* Clean up code and add more unit tests

* Clean up code and remove redundant mysql connector

* Fix flyway script versions

--- a/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/macros.vm
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/macros.vm
@@ -350,15 +350,16 @@ jQuery.each(attributes, function(i, item) {
 <select multiple="multiple" id="jsonAttributeValues" name="jsonAttributeValues" style="display: none;"></select>
 
 <div id="dynamicAttributesContainer" style="margin-bottom: 10px;">
+
 <table>
 	#foreach( $attribute in $args.attributes )
 		#set( $text = $attribute.displayName )
-		#set( $id = $attribute.id )
+		#set( $id = $attribute.uid )
 		#set( $mandatory = $attribute.mandatory )
     #set( $valueType = $attribute.valueType )
 
-		#if( $!args.attributeValues.get( $attribute.id ) )
-			#set( $value = $!args.attributeValues.get( $attribute.id ) )
+		#if( $!args.attributeValues.get( $id ) )
+			#set( $value = $!args.attributeValues.get( $id ) )
 		#else
 			#set( $value = "" )
 		#end
