fix(dhis2-7698): use toLanguageTag for locale

--- a/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/settings/userGeneralSettings.vm
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/settings/userGeneralSettings.vm
@@ -31,7 +31,7 @@
 <div class="setting">
 <select id="currentLocale" name="currentLocale">
 #foreach( $locale in $availableLocales )
-	<option value="$locale.toString()" #if( $locale == $currentLocale )selected="selected"#end>$locale.getDisplayName()</option>
+	<option value="$locale.toLanguageTag()" #if( $locale == $currentLocale )selected="selected"#end>$locale.getDisplayName()</option>
 #end
 </select>
 </div>
@@ -42,7 +42,7 @@
 <select id="currentLocaleDb" name="currentLocaleDb">
 	<option value="">[$i18n.getString( "use_db_locale_no_translation" )]</option>
 #foreach( $locale in $availableLocalesDb )
-	<option value="$locale.toString()" #if( $locale == $currentLocaleDb )selected="selected"#end>$locale.getDisplayName()</option>
+	<option value="$locale.toLanguageTag()" #if( $locale == $currentLocaleDb )selected="selected"#end>$locale.getDisplayName()</option>
 #end
 </select>
 </div>
